// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum IamAlphaWorkforcePoolStateEnum {
  IamAlphaWorkforcePoolStateEnumNO_VALUE_DO_NOT_USE = 0;
  IamAlphaWorkforcePoolStateEnumSTATE_UNSPECIFIED = 1;
  IamAlphaWorkforcePoolStateEnumACTIVE = 2;
  IamAlphaWorkforcePoolStateEnumDELETED = 3;
}

message IamAlphaWorkforcePool {
  string name = 1;
  string self_link = 2;
  string parent = 3;
  string display_name = 4;
  string description = 5;
  IamAlphaWorkforcePoolStateEnum state = 6;
  bool disabled = 7;
  string session_duration = 8;
  string location = 9;
}

message ApplyIamAlphaWorkforcePoolRequest {
  IamAlphaWorkforcePool resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteIamAlphaWorkforcePoolRequest {
  string service_account_file = 1;
  IamAlphaWorkforcePool resource = 2;
}

message ListIamAlphaWorkforcePoolRequest {
  string service_account_file = 1;
  string Location = 2;
  string Parent = 3;
}

message ListIamAlphaWorkforcePoolResponse {
  repeated IamAlphaWorkforcePool items = 1;
}

service IamAlphaWorkforcePoolService {
  rpc ApplyIamAlphaWorkforcePool(ApplyIamAlphaWorkforcePoolRequest) returns (IamAlphaWorkforcePool);
  rpc DeleteIamAlphaWorkforcePool(DeleteIamAlphaWorkforcePoolRequest) returns (google.protobuf.Empty);
  rpc ListIamAlphaWorkforcePool(ListIamAlphaWorkforcePoolRequest) returns (ListIamAlphaWorkforcePoolResponse);
}
